Fix WaveShapperNode's waveshaping curve implementation https://bugs.webkit.org/show_bug.cgi?id=215391

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/webaudio/the-audio-api/the-waveshapernode-interface/curve-tests-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-waveshapernode-interface/waveshaper-limits-expected.txt:

Source/WebCore:

Fix WaveShapperNode's waveshaping curve implementation using the algorithm in the specification:
- https://www.w3.org/TR/webaudio/#dom-waveshapernode-curve

No new tests, rebaselined existing tests.

* Modules/webaudio/WaveShaperDSPKernel.cpp:
(WebCore::WaveShaperDSPKernel::processCurve):

LayoutTests:

Fix existing tests to reflect behavior change. I have verified that these tests
were failing in Firefox and Chrome before I updated them.

* webaudio/resources/waveshaper-testing.js:
(runWaveShaperOversamplingTest):
* webaudio/waveshaper-oversample-2x.html:
* webaudio/waveshaper-oversample-4x.html:


Canonical link: https://commits.webkit.org/228179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265536 268f45cc-cd09-0410-ab3c-d52691b4dbfc