Source/WebCore/Modules/webaudio/WaveShaperDSPKernel.cpp
@@ -101,25 +101,17 @@ void WaveShaperDSPKernel::processCurve(const float* source, float* destination, 
     for (unsigned i = 0; i < framesToProcess; ++i) {
         const float input = source[i];
 
-        // Calculate a virtual index based on input -1 -> +1 with 0 being at the center of the curve data.
-        // Then linearly interpolate between the two points in the curve.
-        double virtualIndex = 0.5 * (input + 1) * curveLength;
-        int index1 = static_cast<int>(virtualIndex);
-        int index2 = index1 + 1;
-        double interpolationFactor = virtualIndex - index1;
-
-        // Clip index to the input range of the curve.
-        // This takes care of input outside of nominal range -1 -> +1
-        index1 = std::max(index1, 0);
-        index1 = std::min(index1, curveLength - 1);
-        index2 = std::max(index2, 0);
-        index2 = std::min(index2, curveLength - 1);
-
-        double value1 = curveData[index1];
-        double value2 = curveData[index2];
-
-        double output = (1.0 - interpolationFactor) * value1 + interpolationFactor * value2;
-        destination[i] = output;
+        float v = (curveLength - 1) * 0.5 * (input + 1);
+        if (v < 0)
+            destination[i] = curveData[0];
+        else if (v >= curveLength - 1)
+            destination[i] = curveData[curveLength - 1];
+        else {
+            float k = floorf(v);
+            float f = v - k;
+            unsigned kIndex = k;
+            destination[i] = (1 - f) * curveData[kIndex] + f * curveData[kIndex + 1];
+        }
     }
 }
 
